--- a/interests.html
+++ b/interests.html
@@ -11,7 +11,7 @@
 
     <body>
         <div class="header">
-            <img src="images/logo.png" height="45">
+            <img src="Images/Logo.png" height="45">
             <div class="menu">
                 <p>
                     <a href="index.html">About</a>
